--- a/assets/styles/sass/_layouts.scss
+++ b/assets/styles/sass/_layouts.scss
@@ -13,7 +13,7 @@
 	margin: 53px 0 0 30px;
 	font: 20px bold $headerFontStack;
 	letter-spacing: 1.15px;
-	z-index: $topLayer;
+	z-index: $aboveItAll;
 }
 
 .about {
@@ -27,7 +27,7 @@
 	background: #fff;
 	@include opacity(.9);
 	overflow: hidden;
-	z-index: $middleLayer;
+	z-index: $topLayer;
 
 	.site-description {
 		font-size: 13px;
